--- a/js高设/第二十一章ajax与comet/dome1.html
+++ b/js高设/第二十一章ajax与comet/dome1.html
@@ -18,7 +18,7 @@ oMyForm.append("accountnum", 123456); // 数字123456被立即转换成字符串
 // fileInputElement中已经包含了用户所选择的文件
 oMyForm.append("userfile", fileInputElement.files[0]);
  
-var oFileBody = "<a id="a"><b id="b">hey!</b></a>"; // Blob对象包含的文件内容
+var oFileBody = "<a id='a'><b id='b'>hey!</b></a>"; // Blob对象包含的文件内容
 var oBlob = new Blob([oFileBody], { type: "text/xml"});
  
 oMyForm.append("webmasterfile", oBlob);
