--- a/js高设/第二十一章ajax与comet/dome2.html
+++ b/js高设/第二十一章ajax与comet/dome2.html
@@ -29,9 +29,9 @@
 		}
 
 		var client = createStreamingClient("dome2.php", function(data){
-			alert("Received: " + data);
+			console.log("Received: " + data);
 		}, function(data){
-			alert("Done!");
+			console.log("Done!");
 		});
 	</script>
 </body>
