--- a/js高设/第二十二章高级技巧/demo2.html
+++ b/js高设/第二十二章高级技巧/demo2.html
@@ -27,7 +27,7 @@
 		}
 
 		// Rectangle.prototype = new Polygon();
-		//
+		//如果构造函数窃取结合使用原型链或者寄生组合则可以解决这个问题。
 
 		var rect = new Rectangle(5, 10);
 		console.log(rect.sides); //undefined
