--- a/js高设/第六章面对对象/demo.html
+++ b/js高设/第六章面对对象/demo.html
@@ -56,7 +56,7 @@
 		console.log('name' in obj1, 'sayAge' in obj1)
 
 		//要获得对象上所以可枚举的实例属性（私有），可以用Object.keys方法
-		console.log(Object.keys(Object.getPrototypeOf(SubType)))
+		console.log(Object.getPrototypeOf(obj1), Object.keys(obj1), Object.keys(Object.getPrototypeOf(obj1)))
 		//如果你想要得到所有实例属性，无论它是否可枚举，可以使用 Object.getOwnPropertyNames方法
 		console.log(Object.getOwnPropertyNames(Object.getPrototypeOf(SubType)))
 
