--- a/es5/dome1.html
+++ b/es5/dome1.html
@@ -30,6 +30,17 @@
 		// 你好，张含韵
 		// 抱歉，江一燕，你不是本家人
 		// 抱歉，李小璐，你不是本家
+		$.ajax({
+			type:'POST',
+			url:'http://www.baidu.com/a',
+			data:{
+				name,
+				password
+			},
+			success:function(data,b,c){
+
+			}
+		})
 	</script>
 </body>
 </html>
